# UIM_Project

./: CMakeLists.txt  README.md  script.py
src/application/: CMakeLists.txt  main.cpp
src/modules/: CMakeLists.txt
src/modules/chart/: CMakeLists.txt
src/modules/chart/include/: chart.h  chart_def.h  chart_manager.h  chart_manager_private.h  chart_view.h  data_exporter.h  data_importer.h  data_storage.h
src/modules/chart/src/: chart_manager.cpp  chart_view.cpp  data_exporter.cpp  data_importer.cpp  data_storage.cpp
src/modules/motion/: CMakeLists.txt
src/modules/motion/include/: motion.h  motion_controller.h  motion_manager.h  motion_manager_private.h  motion_solver.h  motion_worker.h  sample_worker.h
src/modules/motion/src/: motion_controller.cpp  motion_manager.cpp  motion_solver.cpp  motion_worker.cpp  sample_worker.cpp
src/ui_widgets/: CMakeLists.txt
src/ui_widgets/chart_dialog/: CMakeLists.txt  img.qrc
src/ui_widgets/chart_dialog/include/: chart_dialog.h
src/ui_widgets/chart_dialog/src/: chart_dialog.cpp
src/ui_widgets/chart_dialog/ui/: chart_dialog.ui
src/ui_widgets/motion_ctrl_widget/: CMakeLists.txt  img.qrc
src/ui_widgets/motion_ctrl_widget/include/: io_dialog.h  motion_ctrl_widget.h  motion_data_processor.h  sensor_dialog.h  status_led.h
src/ui_widgets/motion_ctrl_widget/src/: io_dialog.cpp  motion_ctrl_widget.cpp  motion_data_processor.cpp  sensor_dialog.cpp  status_led.cpp
src/ui_widgets/motion_ctrl_widget/ui/: io_dialog.ui  motion_ctrl_widget.ui  sensor_dialog.ui
